# OCD_Emulator

./: ModelTraining.ipynb  README.md
Assets/: Graphs.docx  Opamp_Nullor.eps  Tone_Control_Absolute_Error_Envelope_WDF_LTspice.eps  Tone_Control_Output_WDF_LTspice.eps
Circuit/: OCD_Complete_Circuit.asc
Circuitry/: ExpSweep.m  LogarithmicPotentiometer.asc  LogarithmicPotentiometer.asy  OCD_Distortion_Circuit.asc  OCD_ToneControl_Circuit.asc  OCD_ToneControl_WDF.m
Configs/: RNN3-OCD_Parameterized.json
Dependencies/RTNeural/: CMakeLists.txt
EvaluationTest/Distortion/: Comparison_LTspice_NN.m  OCD_Distortion_Circuit.asc
EvaluationTest/ToneControl/: OCD_ToneControl_Circuit.asc  OCD_ToneControl_WDF.m
OCD/: ExpSweep.m  OCD_Distortion_Circuit.asc  OCD_ToneControl_Circuit.asc  OCD_ToneControl_PluginWDF.m  OCD_ToneControl_WDF.m  OCD_Tone_Circuit.asc
Plugin/002_minimal_plugin_cmake/: CMakeLists.txt
Plugin/OCD_Emu_Code/: CMakeLists.txt
PluginCode/: CMakeLists.txt
PluginCode/src/: MonoLimiter.h  NeuralNetwork.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ToneControl.h
PluginCode/src/Processing/: MonoLimiter.cpp  MonoLimiter.h  NeuralNetwork.cpp  NeuralNetwork.h  ToneControl.cpp  ToneControl.h
PluginCode/src/UserInterface/: CustomKnob.cpp  CustomKnob.h  CustomStyle.cpp  CustomStyle.h  Led.cpp  Led.h
Results/OCD_Parameterized-RNN3-OCD_Parameterized/: maxmemusage.txt
TensorboardData/SimpleRNNOCD_Parameterized_LSTM_hs32_pre_high_pass/: events.out.tfevents.1722529228.DESKTOP-DBRE5BL.13204.0
Training/: ModelTraining.ipynb  dist_model_recnet.py  prep_wav.py
TrainingAudio/: Normalizer.m
(+46 files in other folders)
